fixed mobile text cutoff

--- a/src/scss/components/_accordion.scss
+++ b/src/scss/components/_accordion.scss
@@ -72,7 +72,7 @@
       padding-inline: 2rem;
     }
     &.open {
-      max-height: 10rem;
+      max-height: 20rem;
       border-top: 5px solid #fffaf1;
       p {
         opacity: 1;
